# rosbag2peek

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  pre-commit.yml
crates/rospeek-cli/: Cargo.toml  README.md
crates/rospeek-cli/src/: command.rs  main.rs
crates/rospeek-core/: Cargo.toml  README.md
crates/rospeek-core/src/: cdr.rs  error.rs  lib.rs  model.rs  reader.rs  schema.rs  utility.rs
crates/rospeek-core/tests/: test_cdr.rs
crates/rospeek-db3/: Cargo.toml  README.md
crates/rospeek-db3/src/: lib.rs  reader.rs
crates/rospeek-db3/tests/: generate_db3.rs  test_db3reader.rs
crates/rospeek-db3/tests/data/: test.db3
crates/rospeek-gui/: Cargo.toml
crates/rospeek-gui/src/: app.rs  backend.rs  lib.rs
crates/rospeek-mcap/: Cargo.toml
crates/rospeek-mcap/src/: lib.rs  reader.rs
docs/: cdr.md
