[package]
name = "rospeek-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
rospeek-core = { version = "0.1.0", path = "../rospeek-core" }
rospeek-db3 = { version = "0.1.0", path = "../rospeek-db3" }
rospeek-gui = { version = "0.1.0", path = "../rospeek-gui" }
rospeek-mcap = { version = "0.1.0", path = "../rospeek-mcap" }
serde_json = "1.0.142"

[[bin]]
name = "rospeek"
path = "src/main.rs"
