[package]
name = "rospeek-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
eframe = { version = "0.32", default-features = false, features = ["glow", "x11", "wayland"] }
egui = "0.32.0"
rfd = "0.15.4"
rospeek-core = { version = "0.1.0", path = "../rospeek-core" }
rospeek-db3 = { version = "0.1.0", path = "../rospeek-db3" }
